# fmesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Doxyfile
example/: CMakeLists.txt  fracture_mesh_example.cpp
include/: CMakeLists.txt  Edge.hpp  FixedSizeFace.hpp  Index.hpp  IndexIterator.hpp  Point.hpp  PropertyArray.hpp  PropertyDatabase.hpp  TypeTraits.hpp
include/fmesh/: CMakeLists.txt  allocator.hpp  directed_edge.hpp  edge.hpp  fixed_size_face.hpp  fracture_mesh.hpp  index.hpp  index_iterator.hpp  iterator_range.hpp  point.hpp  property_array.hpp  property_registry.hpp  type_traits.hpp  undirected_edge.hpp  vector.hpp
src/: CMakeLists.txt  fixed_size_face.cpp  fracture_mesh.cpp  vector.cpp
test/: CMakeLists.txt  test_fracture_mesh.cpp
